Fixing css for issue on mobile

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -389,7 +389,7 @@ footer a{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        height: 100vh;
+        /* height: 100vh; */
     }
 
     #main-text{
